Fix: Add AI Assistant tab to all navigation bars - Added AI Assistant navigation item to dashboard.html - Added AI Assistant navigation item to create-schedule.html - Added AI Assistant navigation item to create-group.html - Standardized navigation structure across all pages - Ensured consistent user experience for accessing AI features